Improve type ahead